traefik2/02_traefik_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik

spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
    - protocol: TCP
      name: phpmyadmin
      port: 8081
    - protocol: TCP
      name: mailhog
      port: 8053
    - protocol: TCP
      name: mysql
      port: 3306
    - protocol: TCP
      name: admin
      port: 8080
    - protocol: TCP
      name: websecure
      port: 443
  type: LoadBalancer
  selector:
    app: traefik
